cmake_minimum_required(VERSION 3.29)
project(cplus_projects)

set(CMAKE_CXX_STANDARD 20)

add_executable(cplus_projects main.cpp
        datastruct-papers/2009.cpp
        datastruct-papers/2010.cpp
        datastruct-papers/2011.cpp
        datastruct-papers/2012.cpp
        datastruct-papers/quickSort.cpp
        datastruct-papers/2013.cpp
        datastruct-papers/2014.cpp
)
